# realestate-listing-scraper

./: README.md  kensington_redfin_listings.csv  kensington_redfin_listings_cleaned.csv  pyproject.toml  requirements.txt  scrape_redfin_Copy1.py  setup.sh
